show 'new' tile + highlight active layer + prevent invisible layer editing + add meta data to map data

--- a/code13/app/client/mgb.css
+++ b/code13/app/client/mgb.css
@@ -15,6 +15,15 @@
   transition: .3s;
   min-height: 500px;
 }
+.map-filled.highlight-active-layer .no-events{
+  opacity: 0.5;
+}
+.map-filled.highlight-active-layer .no-events:before {
+  content: "";
+  width: 100%; height: 100%;
+  top: 0; left: 0;
+  background-color: black;
+}
 .tilemap-layer{
   position: absolute;
   width: 100%;
